# APEX_peak_search

./: CMakeLists.txt  ExponentialPoly.cpp  ExponentialPoly.hpp  FitResult.hpp  LinkDef.h  README.md  best_likelihood_fit.cpp  best_likelihood_fit.hpp  bininfo.cpp  bininfo.hpp  bootstrap_sample_hist.C  chisquare.cpp  chisquare.hpp  compute_Q0.cpp  compute_Q0.hpp  draw_toy_plot.C  execute_peak_search.C  fit_exponential_poly.cpp  fit_exponential_poly.hpp  fit_parameter.hpp  gauss_integrate.cpp  gauss_integrate.hpp  legendre_polynomial.cpp  legendre_polynomial.hpp  log_likelihood.cpp  log_likelihood.hpp  numbers.cpp  numbers.hpp  pdf_fcn.hpp  toy_peak_search.C
Fcn1D/: ExponentialPoly.cpp  ExponentialPoly.hpp  Fcn1D.cpp  Fcn1D.hpp  LegendrePoly.cpp  LegendrePoly.hpp
functions/: Fcn1D.cpp  Fcn1D.hpp  LegendrePoly.cpp  LegendrePoly.hpp
macros/: generate_gauss_Q0.C  generate_gauss_chi2.C  generate_toy_Q0_dist.C  test_gauss_integrator.C
